@@ -1,8 +1,6 @@
 package com.mf.algorithm;
 
-import java.util.ArrayList;
-import java.util.LinkedList;
-import java.util.List;
+import java.util.*;
 
 public class Permute46 {
 
@@ -11,24 +9,30 @@ public class Permute46 {
         System.out.println(permute46.permute(new int[]{1,2,3}));
     }
 
-    private LinkedList<Integer> paths = new LinkedList<>();
     private List<List<Integer>> result = new ArrayList<>();
+    private List<Integer> paths = new ArrayList<>();
+
     public List<List<Integer>> permute(int[] nums) {
-        dfs(0, nums);
+        int [] used = new int[nums.length];
+        dfs(nums, used);
         return result;
+
     }
 
-    private void dfs (int start, int[] nums) {
-        if (start == nums.length) {
+    private void dfs (int[] nums, int [] used) {
+        if (paths.size() == nums.length) {
             result.add(new ArrayList<>(paths));
             return;
         }
 
-        for (int i = start; i < nums.length; i++) {
+        for (int i = 0; i < nums.length; i++) {
+            // 树枝上去重
+            if (used[i] == 1) continue;
             paths.add(nums[i]);
-            dfs(i + 1, nums);
-            paths.removeLast();
+            used[i] = 1;
+            dfs(nums, used);
+            used[i] = 0;
+            paths.remove(paths.size() -1);
         }
-
     }
 }
